[gd_scene load_steps=3 format=2]

[ext_resource path="res://tests/functional/SGKinematicBody2D/MoveAndCollide3.gd" type="Script" id=1]

[sub_resource type="SGCircleShape2D" id=1]
radius = 79252512

[node name="MoveAndCollide3" type="Node2D"]
script = ExtResource( 1 )

[node name="SGStaticBody2D" type="SGStaticBody2D" parent="."]
position = Vector2( 12712, 6912 )
scale = Vector2( 20, 20 )
fixed_position_x = 833093632
fixed_position_y = 452984832
fixed_scale_x = 1310720
fixed_scale_y = 1310720

[node name="SGCollisionPolygon2D" type="SGCollisionPolygon2D" parent="SGStaticBody2D"]
position = Vector2( -320, -192 )
fixed_position_x = -20971520
fixed_position_y = -12582912
fixed_polygon_pairs = [ [ 20971520, 4194304 ], [ 4194304, 12582912 ], [ 20971520, 20971520 ], [ 37748736, 12582912 ] ]

[node name="SGKinematicBody2DRight" type="SGKinematicBody2D" parent="."]
position = Vector2( 6704, 8216 )
fixed_position_x = 439353344
fixed_position_y = 538443776
collision_layer = 0

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="SGKinematicBody2DRight"]
shape = SubResource( 1 )

[node name="SGKinematicBody2DRight2" type="SGKinematicBody2D" parent="."]
position = Vector2( 6704, 5525 )
fixed_position_x = 439353344
fixed_position_y = 362086400
collision_layer = 0

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="SGKinematicBody2DRight2"]
shape = SubResource( 1 )

[node name="SGKinematicBody2DLeft" type="SGKinematicBody2D" parent="."]
position = Vector2( 18221, 8216 )
fixed_position_x = 1194131456
fixed_position_y = 538443776
collision_layer = 0

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="SGKinematicBody2DLeft"]
shape = SubResource( 1 )

[node name="SGKinematicBody2DLeft2" type="SGKinematicBody2D" parent="."]
position = Vector2( 18221, 5525 )
fixed_position_x = 1194131456
fixed_position_y = 362086400
collision_layer = 0

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="SGKinematicBody2DLeft2"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 25, 25 )
